# terminal-eye-tracker

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  entry.py  pyproject.toml  shell.nix  sol_arch.md
.github/workflows/: build.yml  ci.yml
.omc/: project-memory.json
.omc/sessions/: 15a6f44f-f0e1-42de-83bd-46aa19905c45.json  25d9c3eb-78b5-402f-8121-ec7ea68f6138.json  3be02994-0d2b-4fa6-9493-2b57c710a017.json  42892ad1-4728-4b5c-b903-769188dfb70c.json  c26e52ae-2faa-46d2-addc-7cdfae054e58.json  c9bc4cd3-1c68-4d45-819e-6af05c3a21f4.json  cd83d02e-9e36-43fa-adb1-2c7724825b77.json  e6d25c25-6ebd-44c9-90e2-cbab5d5aa043.json
.omc/state/: agent-replay-25d9c3eb-78b5-402f-8121-ec7ea68f6138.jsonl  agent-replay-c9bc4cd3-1c68-4d45-819e-6af05c3a21f4.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-07T09-21-10-563Z.json
.omc/state/sessions/25d9c3eb-78b5-402f-8121-ec7ea68f6138/: hud-state.json  ultrawork-state.json
.omc/state/sessions/3be02994-0d2b-4fa6-9493-2b57c710a017/: hud-state.json
.omc/state/sessions/c9bc4cd3-1c68-4d45-819e-6af05c3a21f4/: hud-state.json
.omc/state/sessions/cd83d02e-9e36-43fa-adb1-2c7724825b77/: hud-state.json
rs/: Cargo.toml
rs/src/: backend.rs  camera.rs  classifier.rs  config.rs  lib.rs  main.rs  types.rs  vision.rs
rs/src/multiplexer/: mod.rs  tmux.rs  wezterm.rs
rs/tests/: classifier_test.rs  multiplexer_test.rs  vision_test.rs
scripts/: coverage.sh
src/: app.rs  block.rs  config.rs  grid.rs  lib.rs  llm.rs  main.rs  parser.rs  pty.rs  render.rs
tests/: config_test.rs  pty_integration.rs  smoke_test.rs  test_classifier.py  test_tmux_io.py  test_vision.py  test_wezterm_io.py
tmux_eyes/: __main__.py  backend.py  camera.py  classifier.py  config.py  tmux_io.py  types.py  vision.py  wezterm_io.py
