[package]
name = "aiterm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "AI-first terminal emulator (Linux first) — winit + wgpu + cosmic-text"

[lib]
name = "aiterm"
path = "src/lib.rs"

[[bin]]
name = "aiterm"
path = "src/main.rs"

[dependencies]
# Window + GPU
winit = "0.30"
wgpu = "23"

# Text shaping / fonts
cosmic-text = "0.12"
swash = "0.2"
fontdb = "0.23"

# PTY + VT escape parser
portable-pty = "0.9"
vte = "0.13"

# Async runtime + HTTP (LLM client)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / paths
clap = { version = "4", features = ["derive"] }
dirs = "5"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
