[project]
name = "tmux-eyes"
version = "0.1.0"
description = "Eye-tracking pane switcher for tmux (head-pose driven, webcam only)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe>=0.10.21",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
build = [
    "pyinstaller>=6.10",
    "pyinstaller-hooks-contrib>=2024.9",
]

[project.scripts]
tmux-eyes = "tmux_eyes.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmux_eyes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
