[package]
name = "tmux-eyes"
version = "0.1.0"
edition = "2021"
description = "Eye-tracking pane switcher for tmux/wezterm (head-pose driven, webcam only)"
license = "MIT"

[[bin]]
name = "tmux-eyes"
path = "src/main.rs"

[lib]
name = "tmux_eyes"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization (wezterm JSON parsing, configs)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Vision math
nalgebra = "0.33"

# ONNX inference — face landmarking via pure-Rust tract runtime.
tract-onnx = "0.22"

# Image preprocessing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Webcam capture, cross-platform
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }

# Tmux output parsing
regex = "1"

# Model download cache
dirs = "5"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
# Test helpers
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
